[package]
name = "smart-meter-detector-cli"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[[bin]]
name = "smart-meter-detector"
path = "src/main.rs"

[dependencies]
rtlsdr_mt = "2.1"
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
chrono = "0.4"
crossbeam = "0.7"
influx_db_client = "0.3.6"

[dependencies.ctrlc]
version = "3.1"
features = ["termination"]

[dependencies.smart-meter-parser]
path = "../smart-meter-parser"
