[package]
name = "smart-meter-parser"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
static_assertions = "1.1"
log = "0.4"

[dependencies.byteorder]
version = "1.3"
default-features = false
features = []

[dev-dependencies]
#criterion = "0.3"
assert_approx_eq = "1.1"

[dev-dependencies.proptest]
version = "0.10"
default-features = false
features = ["std"]
